# webpack-mdns

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  NetworkController.cpp  NetworkController.hpp  README.md  auto_query.py  cmake_install.cmake  core  docker-compose.yml  install_manifest.txt  main.cpp  mdns-controller  mdns_run.py  test.pcap  test2.pcap
file_trans/: Makefile  build_output.txt  file_trans.grpc.pb.cc  file_trans.pb.cc  file_trans.pb.h  file_trans.proto  file_trans_client.cc  file_trans_server.cc
network_controller/: NetworkController.cpp  NetworkController.hpp
output/: 30_10_output.csv  30_10_output_parsed.csv  30_5_output.csv  30_5_output_parsed.csv  50_10_output.csv  50_10_output_100ms_parsed.csv  50_10_output_150ms_parsed.csv  50_10_output_200ms_parsed.csv  50_10_output_50ms_parsed.csv  50_10_output_parsed.csv  50_5_output.csv  50_5_output_parsed.csv  parse_results.py  results_analysis.ipynb
output/.ipynb_checkpoints/: results_analysis-checkpoint.ipynb
pkg/mdns-controller/: Dockerfile
run_scripts/: auto_query.py  docker_orchestrator.py  docker_orchestrator_central.py  generate_workload.py  mdns-controller  parse_results.py
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mdns-controller
src/binary/: CMakeLists.txt  main.cpp
src/file_trans/: CMakeCache.txt  CMakeLists.txt  Makefile-temp  Makefile-testlocal  a.txt  cmake_install.cmake  file_trans_client.cc  file_trans_server.cc
src/file_trans/include/: file_trans.grpc.pb.h  file_trans.pb.h
src/network_controller/: CMakeLists.txt  Makefile  cmake_install.cmake
src/network_controller/include/NetworkController/: NetworkController.hpp
src/network_controller/src/: NetworkController.cpp
webpacks/: a.wp  b.wp  c.wp  generate_wps.py
